# catalyze-crew

./: .dockerignore  .gitignore  Dockerfile  README-ECR.md  README.md  docker-compose.yml  pyproject.toml
crew/: README.md  pyproject.toml  report.md
crew/src/crew/: crew.py  main.py  utils.py
output/: crew-report_2025-05-24_20-43-22.md
scripts/: build.sh  deploy.sh  push-to-ecr.sh  release.sh
